k8s/dagger/cilium-networkpolicy-allowlist.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dagger-egress-allowlist
  namespace: dagger-exec
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: dagger-runtime
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        # Populate from OCS security.networkAccess.allowOutbound
        - matchName: api.github.com
        - matchPattern: "*.github.com"
